<resources>
    <string name="app_name">ToDoList</string>
    <string name="titolo">Titolo</string>
    <string name="data_creazione">08/02/2017</string>
    <string name="ultima_modifica">12/02/2017</string>
    <string name="corpo">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
                        Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
                        pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel,
                        aliquet nec, vulputate.</string>

    <string name="data_scadenza">28/02/2017</string>
    <string name="action_settings">Settings</string>
    <string name="delete">delete</string>
    <string name="action_edit">edit</string>
</resources>
